--- a/src/style/style.css
+++ b/src/style/style.css
@@ -12,3 +12,23 @@ body{
     margin: 0 auto;
     padding: 0 30px;
 }
+.title_second{
+    font-weight: 900;
+    font-size: 48px;
+    line-height: 104%;
+    letter-spacing: 0.06em;
+    margin-bottom: 114px;
+    position: relative;
+    display: inline-block;
+}
+.title_second::after{
+    content: '';
+    position: absolute;
+    right: 0px;
+    bottom: 0px;
+    width: 190px;
+    height: 32px;
+    background-image: url('./../image/icons/decor-yellow.svg');
+    background-repeat: no-repeat;
+    z-index: -1;
+}
